@@ -1,4 +1,4 @@
-VERSION = 3.1.0
+VERSION = 3.1.1_pre1
 CFLAGS ?= -O2 -pipe
 
 # Should work for both GNU make and BSD make
